--- a/testing-demo/pom.xml
+++ b/testing-demo/pom.xml
@@ -13,10 +13,19 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>testing-demo</name>
 	<description>Demo project for Spring Boot</description>
+	<packaging>war</packaging>
+
 	<properties>
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -45,6 +54,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>testdemo</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
